[project]
name = "words_sugarfrosted"
version = "0.0.1"
authors = [
    { name="Sina Frosted", email="sugarfrosted2005@gmail.com" },
]
description = "My little word processing funtimes"
readme = "README.md"
requires-python = ">3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sugarfrosted/SinaDoesWords"
Issues = "https://github.com/sugarfrosted/SinaDoesWords/issues"